tests/errors/erro_if_scope_leak.lua
function void main()
    if true then
        local x : integer = 10;
    end
    print(x); -- Erro: x não existe neste escopo
end
